--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ body::-webkit-scrollbar-thumb{
 }
 
 #foguete{
-  animation: fly 5s infinite;
+  animation: fly 5s infinite alternate;
   filter: drop-shadow(0 0 0.75rem var(--azul-escuro));
 }
 
@@ -96,33 +96,38 @@ body::-webkit-scrollbar-thumb{
 
 @keyframes fly {
   0%{
-    rotate: 0deg;
-    transform: translateY(10%);
-    transform: translateX(10%);  
-  } 10%{
-    rotate: -80deg;
-    transform: translateY(50%);
-    transform: translateX(50%);
-  } 20%{
-    rotate: -100deg;
-    transform: translateY(70%);
-    transform: translateX(-70%);
-  } 50%{
-    rotate: -180deg;
-    transform: translateY(-90%);
-    transform: translateX(-90%);
-  } 100%{
+    margin-right: 1500px;
+  } 30%{
     rotate: 360deg;
+    transform: translateY(200px);
+  } 60%{
+    rotate: -180deg;
+    margin-left: 400px;
+    transform: translateY(20px);
+  } 80%{
+    rotate: -90deg;
+    margin-left: 100px;
+    transform: translateY(-20px);
+  } 100%{
+    rotate: -180deg;
   }
 }
 
 @media screen and (max-width: 930px) {
+  #foguete{
+    scale: .8;
+  }
+  
   .card-sobre-principal{
     width: 80%;
   }
 }
 
 @media screen and (max-width: 620px){
+  #foguete{
+    scale: .5;
+  }
+  
   .card-sobre-principal{
     flex-direction: column;
   }
