--- a/index.css
+++ b/index.css
@@ -14,8 +14,8 @@
 }
 
 body{
-  background: rgb(0,0,0);
-  background: linear-gradient(76deg, rgba(0,0,0,1) 0%, rgba(30,30,44,1) 50%, rgba(0,0,0,1) 100%);
+  background: rgb(31,31,31);
+background: linear-gradient(90deg, rgba(31,31,31,1) 0%, rgba(30,30,44,1) 50%, rgba(31,31,31,1) 100%);
   overflow-x: hidden;
 }
 
@@ -57,6 +57,8 @@ body::-webkit-scrollbar-thumb{
 
 #meteoro{
   filter: drop-shadow(0 0 0.75rem var(--azul-escuro));
+  margin-bottom: 1rem;
+  animation: float 4s ease-in-out infinite;
 }
 
 .espaco-container{
@@ -99,7 +101,7 @@ body::-webkit-scrollbar-thumb{
   width: 20%;
   flex-wrap: wrap;
   margin: 10px;
-  background-color: rgba(0, 0, 0, 0.281);
+  background-color: var(--azul-escuro);
 }
 
 .img-container{
@@ -136,7 +138,7 @@ body::-webkit-scrollbar-thumb{
 
 @media screen and (max-width: 620px){
   #foguete{
-    scale: .3;
+    scale: .4;
   }
   
   .card-sobre-principal{
